# LightRayEngine

./: .gitignore  CMakeLists.txt  LICENSE
Resources/Default Layouts/: Default.layout
Sources/: main.cpp
Sources/AssetDatabase/: AssetDatabase.cpp  AssetDatabase.h
Sources/Core/: Application.cpp  ConsoleLogImpl.cpp  ConsoleLogImpl.h  EditorApplication.cpp  EditorApplication.h  ProjectSettings.cpp  ProjectSettings.h  SerializedTime.cpp  SerializedTime.h  platform-defines.h
Sources/Core/EditorConfigurationSettings/: ConsoleLogImpl.cpp  ConsoleLogImpl.h  EditorConfigurationSettings.cpp  EditorConfigurationSettings.h  EditorConfigurationSettingsUtils.cpp  EditorConfigurationSettingsUtils.h
Sources/Core/EditorLoop/: EditorLoop.cpp  EditorLoop.h  EditorLoopSystem.h
Sources/Core/FileLog/: FileLog.cpp
Sources/Core/ProjectCreationUtils/: ProjectCreationUtils.cpp  ProjectCreationUtils.h
Sources/Core/ProjectManager/: ProjectManager.cpp  ProjectManager.h
Sources/Core/WindowTitle/: WindowTitleUpdater.cpp  WindowTitleUpdater.h
Sources/EditorGUI/: EditorGUIController.cpp  EditorGUIController.h  EditorWindow.cpp  EditorWindow.h  EditorWindowLayoutData.cpp  EditorWindowLayoutData.h  EditorWindowManager.cpp  EditorWindowManager.h
Sources/EditorGUI/EditorWindows/: AvailableWindows.h  ConsoleWindow.cpp  Hierarchy.cpp  Hierarchy.h  ProjectCreatingWindow.cpp  ProjectCreatingWindow.h  ProjectView.cpp  ProjectView.h  ProjectWizardWindow.cpp  ProjectWizardWindow.h  SceneView.h
Sources/EditorGUI/MenuToolbar/: MenuItems.h  MenuToolbar.cpp  MenuToolbar.h
Sources/ImGUI/: CMakeLists.txt
Sources/JsonLibrary/: CMakeLists.txt  JsonLibrary.cpp  JsonLibrary.h  JsonSerialized.h
Sources/JsonLibrary/Exceptions/: EmptyTypeException.h  FileNotExistsException.h  InvalidCastTypeException.h  JsonLibraryException.h
Sources/JsonLibrary/JsonTypes/: BaseJsonType.cpp  BaseJsonType.h  IJsonType.h  JsonArray.cpp  JsonArray.h  JsonBool.cpp  JsonBool.h  JsonFloat.cpp  JsonFloat.h  JsonInt.cpp  JsonInt.h  JsonObject.cpp  JsonObject.h  JsonObjectData.cpp  JsonObjectData.h  JsonString.cpp  JsonString.h  JsonTypes.cpp  JsonTypes.h
Sources/JsonLibrary/Utils/: FileUtils.cpp  FileUtils.h  JsonDecoder.cpp  JsonDecoder.h  JsonLiteralsUtils.cpp  JsonLiteralsUtils.h
Sources/LightRayCore/: Application.cpp  Application.h  ConsoleLogImpl.cpp
Sources/LightRayCore/ApplicationWindow/: ApplicationWindow.cpp  ApplicationWindow.h
Sources/LightRayCore/EditorConfigurationSettings/: EditorConfigurationSettingsUtils.cpp  EditorConfigurationSettingsUtils.h
Sources/LightRayCore/EditorLoop/: EditorLoop.cpp
Sources/LightRayCore/FileLog/: FileLog.h
Sources/LightRayCore/ProjectManager/: ProjectManager.cpp
Sources/LightRayCore/WindowTitle/: WindowTitleUpdater.cpp
Sources/LightRayEditor/: CMakeLists.txt  LightRayEditor.cpp  LightRayEditor.h
Sources/LightRayEditor/EditorConfigurationSettings/: EditorConfigurationSettings.cpp  EditorConfigurationSettings.h  EditorConfigurationSettingsUtils.cpp  EditorConfigurationSettingsUtils.h
Sources/LightRayEditor/EditorGUI/: DockSpaceBuilder.cpp  DockSpaceBuilder.h  EditorGUIController.cpp  EditorGUIController.h  EditorWindow.h  EditorWindowLayoutData.cpp  EditorWindowLayoutData.h  EditorWindowManager.cpp  EditorWindowManager.h
Sources/LightRayEditor/EditorGUI/EditorWindows/: ConsoleWindow.h  InspectorWindow.cpp  InspectorWindow.h  ProjectCreatingWindow.cpp  ProjectWizardWindow.cpp  ProjectWizardWindow.h  SceneView.cpp
Sources/LightRayEditor/EditorGUI/Layout/: EditorLayout.cpp  EditorLayout.h  LayoutLoader.cpp  LayoutLoader.h  LayoutManager.cpp  LayoutManager.h  LayoutNameWindow.cpp  LayoutNameWindow.h  LayoutSaver.cpp  LayoutSaver.h
Sources/LightRayEditor/EditorGUI/MenuToolbar/: MenuItems.h
Sources/LightRayEditor/EditorLoop/: EditorLoop.cpp  EditorLoop.h  EditorLoopSystem.h
Sources/LightRayEditor/ProjectManager/: ProjectManager.cpp  ProjectManager.h  ProjectSettings.cpp  ProjectSettings.h
Sources/LightRayEngine/: CMakeLists.txt  LightRayEngine.cpp  LightRayEngine.h  SerializedTime.cpp  SerializedTime.h
Sources/LightRayEngine/ConfigurationSettings/: ConfigurationSettings.cpp  ConfigurationSettings.h  ConfigurationSettingsUtils.cpp  ConfigurationSettingsUtils.h
Sources/LightRayEngine/Generic/: SingletonManager.h
Sources/LightRayEngine/Object/: LightRayObject.cpp  LightRayObject.h  ObjectManager.cpp  ObjectManager.h  TypeManager.cpp  TypeManager.h
Sources/LightRayEngine/SceneManagement/: Scene.cpp  Scene.h  SceneData.h  SceneManager.cpp  SceneManager.h  SerializedScene.cpp  SerializedScene.h
Sources/LightRayEngine/Window/: IWindow.h
Sources/LightRayEngine/World/: Component.cpp  Component.h  Entity.cpp  Entity.h  EntityComponentContainer.cpp  EntityComponentContainer.h  EntityManager.cpp  EntityManager.h  World.cpp  World.h  WorldsSystem.cpp  WorldsSystem.h
Sources/LightRayLog/: CMakeLists.txt  LightRayLog.cpp  LightRayLog.h
Sources/NFD/: CMakeLists.txt  INativeFileDialogImpl.h  NativeFileDialog.cpp  NativeFileDialog.h  WinNativeFileDialogImpl.cpp  WinNativeFileDialogImpl.h
Sources/Utils/: CMakeLists.txt  FileUtils.cpp  FileUtils.h
Sources/glm/: CMakeLists.txt
